# clipat

./: Cargo.toml  README.md
src/: client.rs  clipboard.rs  lib.rs  main.rs  protocol.rs  server.rs
tests/: e2e_test.rs
