[package]
name = "clipat"
description = "CLI tool for sharing clipboard with remote SSH sessions"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/SamiKalliomaki/clipat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.5.58", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = ["bmp"] }
once_cell = "1.21.3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
rand = "0.10.0"
